<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/mainMenuLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/textViewTimetableTitle"
            style="@style/TextViewHeader"
            android:text="@string/Train_timetable" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5sp"
            android:layout_marginTop="16dp"
            android:background="@color/gray_lines" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDirectionSubtitle"
                style="@style/TextViewSecondaryGray"
                android:text="@string/Direction" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/GreenIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/ic_green_icon" />

                <Button
                    android:id="@+id/buttonFrom"
                    style="@style/MyButtonBlack"
                    android:layout_weight="1"
                    android:text="@string/From" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left|center_vertical"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded">

                <ImageView
                    android:id="@+id/BlueIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/ic_blue_icon" />

                <Button
                    android:id="@+id/buttonTo"
                    style="@style/MyButtonBlack"
                    android:text="@string/To" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5sp"
            android:layout_marginTop="16dp"
            android:background="@color/gray_lines" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/titlePictureNoWays"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageViewNoWays"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:srcCompat="@drawable/ic_train_icon_red" />

                <TextView
                    android:id="@+id/textViewTitleTwo"
                    style="@style/TextViewSecondaryGray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/No_way_stations_Title"
                    android:textAlignment="center"
                    android:textColor="@color/red_error" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/titlePictureStart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:srcCompat="@drawable/ic_train_icon" />

                <TextView
                    android:id="@+id/textViewTitileOne"
                    style="@style/TextViewSecondaryGray"
                    android:text="@string/Select_stations_Title"
                    android:textAlignment="center" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/timetableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/timetableSubtitle"
                style="@style/TextViewSecondaryGray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Timetable_Subtitle"
                android:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/my_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/card" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>